--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -39,16 +39,42 @@
                         <form th:action="@{/producto/guardar}" th:object="${producto}"
                               method="POST" class="was-validated" enctype="multipart/form-data">
                             <div class="modal-body">
+
+                                <div class="mb-3">
+                                    <label for="idCategoria">[[#{producto.categoria}]]</label>
+                                    <select id="idCategoria" name="categoria.idCategoria" class="form-select" aria-label="Defaul select exmple">
+
+                                        <option  th:each="categoria: ${categorias}" th:value="${categoria.idCategoria}">
+                                            [[${categoria.descripcion}]]
+                                        </option>
+
+                                    </select>
+
+                                </div>
+
+
                                 <div class="mb-3">
                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
                                     <input type="text" class="form-control" name="descripcion" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="activo">[[#{producto.activo}]]</label>
-                                    <input class="form-check-input" type="checkbox" name="activo" id="activo"/>
+                                    <label for="detalle">[[#{producto.detalle}]]</label>
+                                    <textarea class="form-control" id="detalle" name="detalle" rows="3" required="true"></textarea>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="imagen">[[#{producto.rutaImagen}]]</label>
+                                    <label for="precio">[[#{producto.precio}]]</label>
+                                    <input class="form-control" type="number" name="precio" id="precio" required="true"/>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="existencias">[[#{producto.existencias}]]</label>
+                                    <input class="form-control" type="number" name="existencias" id="existencias" required="true"/>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="activo">[[#{producto.activo}]]</label>
+                                    <input class="form-check-input" type="checkbox" name="activo" id="activo" required="true"/>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="imagen">[[#{producto.imagen}]]</label>
                                     <input class="form-control" type="file" name="imagenFile" onchange="readURL(this);"/>
                                     <img id="blah" src="#" alt="your image" height="200"/>
                                 </div>
@@ -75,16 +101,22 @@
                                 <table class="table table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr><th>#</th>
-                                            <th>[[#{producto.descripcion}]]</th>
-                                            <th>[[#{producto.precio}]]</th>
-                                             <th>[[#{producto.activo}]]</th>
+                                            <th class="text-center">[[#{producto.descripcion}]]</th>
+                                            <th class="text-center">[[#{producto.precio}]]</th>
+                                            <th class="text-center">[[#{producto.existencias}]]</th>
+                                            <th class="text-center">[[#{producto.total}]]</th>
+                                            <th class="text-center">[[#{producto.activo}]]</th>
+                                            <th class="text-center">[[#{producto.categorias}]]</th>
                                             <th></th></tr>
                                     </thead>
                                     <tbody>
                                         <tr th:each="producto, contador : ${productos}">
-                                            <td>[[${contador.count}]]</td>
-                                            <td>[[${producto.descripcion}]]</td>
-                                            <td>[[${producto.precio}]]</td>
+                                            <td class="text-center">[[${contador.count}]]</td>​
+                                            <td class="fs-6">[[${producto.descripcion}]]</td>​
+                                            <td class="text-end">¢[[${#numbers.formatDecimal(producto.precio, 1, 'DEFAULT', 2, 'DEFAULT')}]]</td>​
+                                            <td class="text-center">[[${producto.existencias}]]</td>​
+                                            <td class="text-end">[[${#numbers.formatDecimal(producto.precio*producto.existencias, 1, 'DEFAULT', 2, 'DEFAULT')}]]</td>​
+                                            <td class="text-end">[[${producto.categoria.descripcion}]]</td>​
                                             <td th:text="${producto.activo} ? 'Activa' : 'Inactiva'" />
                                             <td><a th:href="@{/producto/eliminar/}+${producto.idProducto}"
                                                    class="btn btn-danger">
